<resources>
    <string name="pharma">Pharma </string>
    <string name="app_name">Pharmacy</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="name">name</string>
    <string name="phone_number">phone number</string>
    <string name="telephone_number">telephone_number</string>
    <string name="password">password</string>
    <string name="next">next</string>
    <string name="pharmacy_name">Pharmacy name</string>
    <string name="address">address</string>
    <string name="additional_address">additional address</string>
    <string name="back">back</string>
    <string name="normal">normal</string>
    <string name="offer">offer</string>
    <string name="repositories">Repositories</string>
    <string name="companies">Companies</string>
    <string name="types">Types</string>
    <string name="kinds">Kinds</string>
    <string name="search_for_repository">search for repository</string>
    <string name="my_profile">my profile</string>
    <string name="invoices">invoices</string>
    <string name="shopping">shopping</string>
    <string name="settings">settings</string>
    <string name="search_for_companies">search for companies</string>
    <string name="search_for_product">search for product</string>
    <string name="personal">personal</string>
    <string name="pharmacy">pharmacy</string>
    <string name="hello">Hello</string>
    <string name="tabs" translatable="false">tabs</string>
</resources>